Fix makefile for 16.04 machines.

--- a/support/kinect/Makefile
+++ b/support/kinect/Makefile
@@ -5,10 +5,8 @@ install_udev:
 
 install_lib:
 	sudo apt-get install freeglut3-dev build-essential cmake usbutils libusb-1.0-0-dev git-core
+	- sudo apt-get install libXi-dev libXmu-dev 
 	git clone git://github.com/OpenKinect/libfreenect.git
-	cd libfreenect
-	cmake .
-	make
-	sudo make install
+	cd libfreenect; cmake .; make; sudo make install
 
 
