Add Makefile flags to work with OpenCV 3.3.

--- a/autonomy/aruco/viewer/Makefile
+++ b/autonomy/aruco/viewer/Makefile
@@ -2,7 +2,7 @@ OPTS=-g -O3
 ARUCO=/usr/local
 OPENCV=/usr/lib/x86_64-linux-gnu
 CFLAGS=$(OPTS) -L$(OPENCV) -I$(ARUCO)/include/aruco 
-LOPENCV=-lopencv_core -lopencv_calib3d -lopencv_highgui -lopencv_features2d -lopencv_imgproc -lopencv_video -lpthread -lm
+LOPENCV=-lopencv_core -lopencv_calib3d -lopencv_highgui -lopencv_features2d -lopencv_imgproc -lopencv_video -lopencv_videoio -lopencv_imgcodecs -lpthread -lm
 LFLAGS=$(OPTS) -L$(ARUCO)/lib -laruco -Wl,-rpath,$(ARUCO)/lib -Wl,-rpath,$(OPENCV)/lib $(LOPENCV)
 
 
