Remove calibration_markermap, which requires Eigen.

--- a/autonomy/aruco/aruco-3.0.11/CMakeLists.txt
+++ b/autonomy/aruco/aruco-3.0.11/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 
 if(BUILD_UTILS)
   add_subdirectory(utils)
-  add_subdirectory(utils_markermap)
+#  add_subdirectory(utils_markermap)
   add_subdirectory(utils_calibration)
 endif()
 include(cmake/printInfo.cmake)
