--- a/parts/realsense_scanner/realsense_cv_test/Makefile
+++ b/parts/realsense_scanner/realsense_cv_test/Makefile
@@ -1,7 +1,7 @@
 all: realsense
 
 realsense: realsense.cpp
-	g++ $< -o $@ -lrealsense2 `pkg-config opencv --cflags --libs` -ljpeg
+	g++ -O -g -std=c++14 $< -o $@ -lrealsense2 `pkg-config opencv --cflags --libs` 
 
 clean:
 	- rm realsense
