Heavily rework backend to use gridnav autonomous path planning for driving planning.  Still not 100% reliable due to cutting too close to known obstacles.

--- a/autonomy/backend/Makefile
+++ b/autonomy/backend/Makefile
@@ -18,7 +18,8 @@ else
 	endif
 endif
 
-CFLAGS=-O -Wall -Wno-deprecated-declarations -Wno-char-subscripts
+OPTS=-O
+CFLAGS=$(OPTS) -Wall -Wno-deprecated-declarations -Wno-char-subscripts
 
 all: backend
 
