Include first draft of Aruco vision markers from RealSense color image, while still doing depth processing on depth image.

--- a/autonomy/realsense/Makefile
+++ b/autonomy/realsense/Makefile
@@ -1,11 +1,12 @@
 CFLAGS=-I../../autonomy/include
+LIBS=-laruco -lrealsense2 `pkg-config opencv --cflags --libs`
 OPTS=-g -O4
 
 
 all: realsense
 
-realsense: realsense.cpp
-	g++ $(OPTS) -std=c++14 $(CFLAGS) $< -o $@ -lrealsense2 `pkg-config opencv --cflags --libs` 
+realsense: realsense.cpp aruco_localize.cpp ../include/*/*
+	g++ $(OPTS) -std=c++14 $(CFLAGS) $< -o $@ $(LIBS)
 
 clean:
 	- rm realsense
