Updated Makefile, switched pub/sub back to localhost only.

--- a/autonomy/networking/Makefile
+++ b/autonomy/networking/Makefile
@@ -1,8 +1,10 @@
 OPTS=-O3
 CFLAGS= -std=c++14 $(OPTS)
 LDFLAGS=  -L/usr/local/lib -lzmq
+PROGS=network-client network-server network-sub network-pub
 
-all: network-client network-server network-sub network-pub
+
+all: $(PROGS)
 
 network-client: hello_client.cpp
 	g++ $(CFLAGS) $< $(LDFLAGS)  -o $@
@@ -17,6 +19,6 @@ network-pub: publisher_test.cpp
 	g++ $(CFLAGS) $< $(LDFLAGS)  -o $@
 
 clean:
-	- rm network-client network-server
+	- rm $(PROGS)
 
 
