Added pose tracking, with ZMQ network from the realsense to the backend (only, for now)

--- a/autonomy/realsense/Makefile
+++ b/autonomy/realsense/Makefile
@@ -1,5 +1,5 @@
 CFLAGS=-I../../autonomy/include
-LIBS=-laruco -lrealsense2 `pkg-config opencv --cflags --libs`
+LIBS=-lzmq  -laruco -lrealsense2 `pkg-config opencv --cflags --libs`
 OPTS=-g -O4
 
 
