Add timing log to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ autonomy/backend/log.txt
 autonomy/frontend/frontend
 autonomy/frontend/log.txt
 autonomy/realsense/beacon_command/beacon
+autonomy/backend/timing.log
