Fix lockup on backend due to uninitialized angle (by initializing angles, while -> if, and add debug flags to compile line)

--- a/autonomy/backend/Makefile
+++ b/autonomy/backend/Makefile
@@ -20,7 +20,7 @@ else
 	endif
 endif
 
-OPTS=-O
+OPTS=-g -O4
 CFLAGS=$(OPTS) -Wall -Wno-deprecated-declarations -Wno-char-subscripts
 
 all: backend
