feat: updates make file

--- a/autonomy/unitTests/data_exchange/Makefile
+++ b/autonomy/unitTests/data_exchange/Makefile
@@ -1,6 +1,6 @@
 OPTS=-g
 CFLAGS=-I../../include -std=c++11 $(OPTS)
-PROGS=millitime latcheck lunatic_print_drive lunatic_print_encoders lunatic_print_stepper
+PROGS=millitime latcheck lunatic_print_drive lunatic_print_encoders lunatic_print_stepper localizer
 
 all: $(PROGS)
 
@@ -19,6 +19,8 @@ lunatic_print_encoders: lunatic_print_encoders.cpp
 lunatic_print_stepper: lunatic_print_stepper.cpp
 	g++ $(CFLAGS) $< -o $@
 
+localizer: localizer.cpp
+	g++ $(CFLAGS) $< -o $@
 
 clean:
 	- rm $(PROGS)
