fix: make file for unit tests

--- a/autonomy/unitTests/data_exchange/Makefile
+++ b/autonomy/unitTests/data_exchange/Makefile
@@ -1,6 +1,6 @@
 OPTS=-g
 CFLAGS=-I../../include -std=c++11 $(OPTS)
-PROGS=millitime latcheck lunatic_print_drive lunatic_print_encoders lunatic_print_stepper localizer pathplanner
+PROGS=millitime latcheck lunatic_print_drive lunatic_print_encoders lunatic_print_stepper
 
 all: $(PROGS)
 
@@ -17,12 +17,6 @@ lunatic_print_encoders: lunatic_print_encoders.cpp
 	g++ $(CFLAGS) $< -o $@
 
 lunatic_print_stepper: lunatic_print_stepper.cpp
-	g++ $(CFLAGS) $< -o $@
-
-localizer: localizer.cpp
-	g++ $(CFLAGS) $< -o $@
-
-pathplanner: pathplanner.cpp
 	g++ $(CFLAGS) $< -o $@
 
 clean:
