fix: Move lunatic_print programs out of unitTests and into lunabug directory.

--- a/autonomy/lunabug/Makefile
+++ b/autonomy/lunabug/Makefile
@@ -1,12 +1,24 @@
 OPTS=-g -O4
 CFLAGS=-I../include  -Wall  -std=c++14  $(OPTS)
 LIBS=`pkg-config opencv --cflags --libs`
-PROGS=lunaview
+PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos
 
 all: $(PROGS)
 
 lunaview: lunaview.cpp ../include/*/*
 	g++ $(OPTS) $(CFLAGS) $< -o $@ $(LIBS)
+
+lunatic_print_drive: lunatic_print_drive.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_print_encoders: lunatic_print_encoders.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_print_stepper: lunatic_print_stepper.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_print_2Dpos: lunatic_print_2Dpos.cpp
+	g++ $(CFLAGS) $< -o $@
 
 clean:
 	- rm $(PROGS)
