--- a/autonomy/unitTests/data_exchange/Makefile
+++ b/autonomy/unitTests/data_exchange/Makefile
@@ -1,6 +1,6 @@
 OPTS=-g
 CFLAGS=-I../../include -std=c++11 $(OPTS)
-PROGS=millitime latcheck lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos
+PROGS=millitime latcheck 
 
 all: $(PROGS)
 
@@ -8,18 +8,6 @@ millitime: millitime.cpp
 	g++ $(CFLAGS) $< -o $@
 
 latcheck: latcheck.cpp
-	g++ $(CFLAGS) $< -o $@
-
-lunatic_print_drive: lunatic_print_drive.cpp
-	g++ $(CFLAGS) $< -o $@
-
-lunatic_print_encoders: lunatic_print_encoders.cpp
-	g++ $(CFLAGS) $< -o $@
-
-lunatic_print_stepper: lunatic_print_stepper.cpp
-	g++ $(CFLAGS) $< -o $@
-
-lunatic_print_2Dpos: lunatic_print_2Dpos.cpp
 	g++ $(CFLAGS) $< -o $@
 
 clean:
