feat: Talk to realsense, feed obstacles and markers into localizer.

--- a/autonomy/Makefile
+++ b/autonomy/Makefile
@@ -1,11 +1,13 @@
+PROGS=backend frontend localizer pathplanner stepper vision lunabug
 
+all: 
+	for dir in $(PROGS); do make -C $$dir; done
 
+clean: 
+	for dir in $(PROGS); do make -C $$dir clean; done
 
 install:
-	sudo apt-get install freeglut3-dev g++ make libsoil-dev
-	sudo apt-get install cmake libopencv-dev libcv-dev libhighgui-dev
-	cd aruco; tar xvf aruco-*tgz; cd aruco-*/; mkdir build; cd build; cmake ..; make; sudo make install
-	cd aruco/viewer; make
-	cd backend; make
-	cd frontend; make
+	sudo apt-get install freeglut3-dev g++ make libzmq3-dev
+	sudo apt-get install cmake libopencv-dev 
+	cd aruco/aruco-3.0.11; cmake .; make; sudo make install
 
