feat: Add debugging for path planning target position.

--- a/autonomy/lunabug/Makefile
+++ b/autonomy/lunabug/Makefile
@@ -1,7 +1,7 @@
 OPTS=-O4
 CFLAGS=-I../include  -Wall  -std=c++14  $(OPTS)
 LIBS=`pkg-config opencv --cflags --libs`
-PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos
+PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos lunatic_print_target lunatic_set_target
 
 all: $(PROGS)
 
@@ -18,6 +18,12 @@ lunatic_print_stepper: lunatic_print_stepper.cpp
 	g++ $(CFLAGS) $< -o $@
 
 lunatic_print_2Dpos: lunatic_print_2Dpos.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_print_target: lunatic_print_target.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_set_target: lunatic_set_target.cpp
 	g++ $(CFLAGS) $< -o $@
 
 clean:
