feat: planner_target is now templated, in preparation for more general heuristic A* search.

--- a/autonomy/pathplanner/Makefile
+++ b/autonomy/pathplanner/Makefile
@@ -4,7 +4,7 @@ PROGS=pathplanner
 
 all: $(PROGS)
 
-pathplanner: pathplanner.cpp
+pathplanner: pathplanner.cpp pathplanner.h ../include/gridnav/* ../include/aurora/*
 	g++ $(CFLAGS) $< -o $@
 
 clean:
