fix: adds dataexhange files to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,10 +57,34 @@ CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Testing
-Makefile
+
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
 autonomy/aruco/aruco-3.0.11/src/libaruco.so.3.0
+autonomy/aruco/aruco-3.0.11/src/libaruco.so.3.0.11
+autonomy/aruco/aruco-3.0.11/utils/
+
+autonomy/aruco/aruco-3.0.11/utils_calibration/
+
+autonomy/bac-kend/backend
+autonomy/cartographer/cartographer
+autonomy/cvs/cvs
+autonomy/localizer/localizer
+autonomy/lunabug/lunatic_print_2Dpos
+autonomy/lunabug/lunatic_print_drive
+autonomy/lunabug/lunatic_print_encoders
+autonomy/lunabug/lunatic_print_stepper
+autonomy/lunabug/lunatic_print_target
+autonomy/lunabug/lunatic_set_target
+autonomy/lunabug/lunaview
+autonomy/pathplanner/debug_nav.txt
+autonomy/pathplanner/pathplanner
+autonomy/stepper/stepper
+autonomy/unitTests/data_exchange/millitime
+autonomy/vision/vision
+autonomy/unitTests/lat_check/.vscode/settings.json
+autonomy/aruco/aruco-3.0.11/src/Makefile
+autonomy/aruco/aruco-3.0.11/Makefile
