feat: append make file to include set_stepper

--- a/autonomy/lunabug/Makefile
+++ b/autonomy/lunabug/Makefile
@@ -1,7 +1,7 @@
 OPTS=-O4
 CFLAGS=-I../include  -Wall  -std=c++14  $(OPTS)
 LIBS=`pkg-config opencv --cflags --libs`
-PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos lunatic_print_target lunatic_set_target
+PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos lunatic_print_target lunatic_set_target lunatic_set_stepper
 
 all: $(PROGS)
 
@@ -24,6 +24,9 @@ lunatic_print_target: lunatic_print_target.cpp
 	g++ $(CFLAGS) $< -o $@
 
 lunatic_set_target: lunatic_set_target.cpp
+	g++ $(CFLAGS) $< -o $@
+
+lunatic_set_stepper: lunatic_set_stepper.cpp
 	g++ $(CFLAGS) $< -o $@
 
 clean:
