feat: Backend now talks to nano via "kend" over the data exchange, bypassing the mega completely.

--- a/autonomy/Makefile
+++ b/autonomy/Makefile
@@ -1,4 +1,4 @@
-PROGS=backend frontend localizer pathplanner stepper vision lunabug andretti cartographer
+PROGS=backend kend frontend localizer pathplanner stepper vision lunabug andretti cartographer
 
 all: 
 	for dir in $(PROGS); do make -C $$dir; done
