--- a/autonomy/aruco/aruco-3.0.11/CMakeLists.txt
+++ b/autonomy/aruco/aruco-3.0.11/CMakeLists.txt
@@ -18,19 +18,19 @@ include(cmake/compilerOptions.cmake)
 add_definitions(-DUSE_SVM_LABELER)
 add_subdirectory(src)
 
-if(GL_FOUND AND BUILD_GLSAMPLES)
-  add_subdirectory(utils_gl)
-endif()
-if(BUILD_TESTS)
-  add_subdirectory(tests)
-endif()
+#if(GL_FOUND AND BUILD_GLSAMPLES)
+#  add_subdirectory(utils_gl)
+#endif()
+#if(BUILD_TESTS)
+#  add_subdirectory(tests)
+#endif()
 
 
-if(BUILD_UTILS)
-  add_subdirectory(utils)
+#if(BUILD_UTILS)
+#  add_subdirectory(utils)
 #  add_subdirectory(utils_markermap)
-  add_subdirectory(utils_calibration)
-endif()
+#  add_subdirectory(utils_calibration)
+#endif()
 include(cmake/printInfo.cmake)
 include(cmake/installOptions.cmake)
 
