Feature: test std::atomic inside a data_exchange area (seems to work!).

--- a/autonomy/unitTests/data_exchange/Makefile
+++ b/autonomy/unitTests/data_exchange/Makefile
@@ -1,10 +1,13 @@
-OPTS=-g
+OPTS=-O
 CFLAGS=-I../../include -std=c++11 $(OPTS)
-PROGS=millitime latcheck 
+PROGS=millitime latcheck atomic_exchange
 
 all: $(PROGS)
 
 millitime: millitime.cpp
+	g++ $(CFLAGS) $< -o $@
+
+atomic_exchange: atomic_exchange.cpp
 	g++ $(CFLAGS) $< -o $@
 
 latcheck: latcheck.cpp
