Fix: allow using the Ubuntu 20.04 "opencv4" package name, not the old "opencv".

--- a/autonomy/Makefile
+++ b/autonomy/Makefile
@@ -7,7 +7,6 @@ clean:
 	for dir in $(PROGS); do make -C $$dir clean; done
 
 install:
-	sudo apt-get install freeglut3-dev g++ make libzmq3-dev
-	sudo apt-get install cmake libopencv-dev 
+	sudo apt-get install freeglut3-dev g++ make cmake libopencv-dev 
 	cd aruco/aruco-3.0.11; cmake .; make; sudo make install
 
