--- a/autonomy/lunabug/Makefile
+++ b/autonomy/lunabug/Makefile
@@ -1,6 +1,7 @@
+include ../Makefile.inc
 OPTS=-O4
-CFLAGS=-I../include  -Wall  -std=c++14  $(OPTS)
-LIBS=`pkg-config opencv --cflags --libs`
+CFLAGS=-I../include  -Wall  -std=c++14  $(OPTS) $(CVCFLAGS)
+LIBS=$(CVLINK)
 PROGS=lunaview lunatic_print_drive lunatic_print_encoders lunatic_print_stepper lunatic_print_2Dpos lunatic_print_3Dpos lunatic_print_target lunatic_set_target lunatic_set_stepper exchange_read exchange_write
 
 all: $(PROGS)
