Use opencv4 by default (it seems to be common on recent Ubuntu installs).

--- a/autonomy/Makefile.inc
+++ b/autonomy/Makefile.inc
@@ -1,9 +1,9 @@
 
 # OpenCV flags: Ubuntu 20.04 OpenCV4 version
-#CVCFLAGS=`pkg-config opencv4 --cflags`
-#CVLINK=-lpthread `pkg-config opencv4 --cflags --libs`
+CVCFLAGS=`pkg-config opencv4 --cflags`
+CVLINK=-lpthread `pkg-config opencv4 --cflags --libs`
 
 # Old OpenCV flags for older machines
-CVCFLAGS=`pkg-config opencv --cflags`
-CVLINK=-lpthread `pkg-config opencv --cflags --libs`
+#CVCFLAGS=`pkg-config opencv --cflags`
+#CVLINK=-lpthread `pkg-config opencv --cflags --libs`
 
